[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banyan-platform"
version = "0.1.0"
description = "Embeddable multi-layer platform backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "strawberry-graphql[fastapi]==0.312.3",
  "uvicorn==0.34.2",
  "pydantic==2.11.4",
  "psycopg[binary]==3.2.7"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
