[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banyan-platform"
version = "0.1.0"
description = "Embeddable multi-layer platform backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn>=0.34.2",
  "pydantic>=2.13.4",
  "duckdb>=1.0",
  "psycopg[binary]>=3.2.7",
  "fastmcp>=3.4.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx>=0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
